--- a/splashstylesheet.css
+++ b/splashstylesheet.css
@@ -1,3 +1,16 @@
-* {
-    margin: 0px; 
+header{
+    background: white
+}
+h1{
+color:black;
+text-shadow: 4px 4px 4px #aaa;
+font-size: 1.5em;
+float:left;
+widows: 900px;
+}
+body{
+font-family: 'Vollkorn';
+font-size: 25px;
+font-weight:bold;
+font-style: oblique;
 }
