--- a/splashstylesheet.css
+++ b/splashstylesheet.css
@@ -59,8 +59,10 @@ h3{
 
 .guide {
     border: 1px solid gold; 
+    float: left; 
+    width: 50%; 
     margin: auto;  
-    padding: 70px 0; 
+    padding: 50px; 
 }
 
 .left h3 {
@@ -68,9 +70,11 @@ h3{
 }
 
 .right {
-    border: 1px solid gold; 
+    border: 1px solid gold;
+    float: right;
+    width: 50%;   
     margin: auto; 
-    padding: 10px;   
+    padding: 50px;   
 }
 
 .stat1 {
