--- a/splashstylesheet.css
+++ b/splashstylesheet.css
@@ -64,18 +64,21 @@ h3{
 .guide {
     border: 1px solid gold; 
     float: left; 
-    width: 50%; 
-    margin: auto;  
-    padding: 50px; 
-    text-align: center; 
+    width: 40%; 
+    margin: 10px;  
+    padding: 30px; 
+    padding-right: 30px; 
+    text-align: center;  
 }
 
 .statistics {
     border: 1px solid gold;
     float: right;
-    width: 50%;   
-    margin: auto; 
-    padding: 50px;   
+    width: 40%;   
+    margin: 10px; 
+    padding: 30px;  
+    padding-left: 30px; 
+    text-align: center;  
 }
 
 
