--- a/splashstylesheet.css
+++ b/splashstylesheet.css
@@ -18,6 +18,21 @@ h2 {
     margin-bottom: 10px; 
 }
 
+button {
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s; 
+    background-color: tomato; 
+    border: none; 
+    color: black; 
+    text-align: center; 
+    font-size: 16px; 
+}
+
+button:hover {
+    background-color: white; 
+    color: black; 
+}
+
 p {
     color: white; 
 }
