--- a/splashstylesheet.css
+++ b/splashstylesheet.css
@@ -26,11 +26,22 @@ button {
     color: black; 
     text-align: center; 
     font-size: 16px; 
+    position: absolute; 
+    margin-left: 240px;
+    border-radius: 8px; 
+    padding: 10px 15px;  
+    box-shadow: 0 7px #999;   
 }
 
 button:hover {
-    background-color: white; 
+    background-color: coral; 
     color: black; 
+}
+
+button:active {
+    background-color: whitesmoke; 
+    box-shadow: 0 2px #666; 
+    transform: translateY(5px); 
 }
 
 p {
