--- a/public/stylesheets/splashstylesheet.css
+++ b/public/stylesheets/splashstylesheet.css
@@ -4,18 +4,21 @@ header {
 }
 
 h1{
-    color:white; 
     text-shadow: 4px 4px 4px #aaa;
     font-size: 80%; 
 }
 
 h2 {
     color:white; 
-    text-align: left;  
+    text-align: center;  
     margin-left: 10px; 
     margin-right: 10px; 
     margin-top: 10px; 
     margin-bottom: 10px; 
+}
+
+h2::before{
+    background-color: pink; 
 }
 
 button {
@@ -76,7 +79,8 @@ p {
 .input {
     margin: auto; 
     width: 50%; 
-    padding: 10px; 
+    padding: 75px; 
+    text-align: center; 
 }
 
 body{
@@ -91,6 +95,7 @@ h3{
     border: 1px solid gold; 
     float: left; 
     width: 40%; 
+    height: 300px; 
     margin: 10px;  
     padding: 30px; 
     padding-right: 30px; 
@@ -102,7 +107,8 @@ h3{
 .statistics {
     border: 1px solid gold;
     float: right;
-    width: 40%;   
+    width: 40%;  
+    height: 300px;  
     margin: 10px; 
     padding: 30px;  
     padding-left: 30px; 
