--- a/public/stylesheets/splashstylesheet.css
+++ b/public/stylesheets/splashstylesheet.css
@@ -17,10 +17,6 @@ h2 {
     margin-bottom: 10px; 
 }
 
-h2::before{
-    background-color: pink; 
-}
-
 button {
     -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s; 
@@ -81,6 +77,11 @@ p {
     width: 50%; 
     padding: 75px; 
     text-align: center; 
+}
+
+#username {
+    height: 40px; 
+    font-size: 14pt; 
 }
 
 body{
