--- a/public/stylesheets/splashstylesheet.css
+++ b/public/stylesheets/splashstylesheet.css
@@ -17,8 +17,7 @@ h2 {
     margin-bottom: 10px; 
 }
 p::before { 
-    content: "Read this -";
-    background-color: tomato;
+    content: "Read this: ";
     color: gold;
     font-weight: bold;
   }
