--- a/public/stylesheets/gamestylesheet.css
+++ b/public/stylesheets/gamestylesheet.css
@@ -1,9 +1,13 @@
 @import "splashstylesheet.css"; 
 
-* {
-    color:white;   
-    margin-left: 10px; 
-    margin-right: 10px; 
-    margin-top: 10px; 
-    margin-bottom: 10px; 
+.stats_black {
+    float: left; 
+    border: 1px solid gold; 
+    width: 10%; 
+}
+
+.stats_white {
+    float: right; 
+    border: 1px solid gold;
+    width: 10%; 
 }
